service repair page update
